Working on base-beta

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,6 @@
-########################################################################################################################
 #                                                          BountyOnHead
 #                                                       Author: Alen_Alex
 #                                             Developed For: sudoyou , SemiVanillaMC
-########################################################################################################################
 #Things To Note:
 #The entire plugin supports kyori's adventure MiniMessage
 #https://docs.adventure.kyori.net/minimessage
@@ -10,29 +8,87 @@
 
 ##Prefix of the plugin
 ##You can leave it blank if you don't wish to set one
-prefix: "<color:#0488D0>Bounty<color:#FAFAD2>On<color:#CBB7FF>Head <color:#EAE9E9>» "
+prefix: '<color:#0488D0>Bounty<color:#FAFAD2>On<color:#CBB7FF>Head <color:#EAE9E9>» '
 
 ##Duration of a bounty in sec. How long does a bounty stay on a player
-bounty-duration-in-sec:
+bounty-duration-in-sec: 86400
 
-##List of rewards that can be executed once a player has killed a bounty
-##You can categorize rewards based on permission. The permission node for rewards is boh.reward.level
-##So for example the player with reward boh.reward.10 will execute the 10 level reward
-##0 is the default Level it would be applicable to anyone
-##max-ranks: Set it to a reasonable level. The plugin will check 0 to this level. Reducing this will have a lower loop
+#################################################################
+#levels are like the internal rank system for the plugin
+#levels.messages:
+#These messages are the messages that each player gets when one rank ups. If a rank for a message is not present. It will
+#force default message.
+#NOTE: Never ever delete levels.messages.default, It will be auto - regenerated even if you delete. If you don't want a
+#default message, you can set it blank
+#############
+#levels.kills
+##These settings define the level a player can achieve when he acquires a specific amount of levels
+##The level should match with in the rewards.level.level else the plugin will be disabled
+##An example for it would be
+##5:1 -> The player will be on first level once he reaches 5 kills and rewards will be based of rewards.level.1 on the
+##10:2 -> The player will be on first level once he reaches 10 kills and rewards will be based of rewards.level.2 on the
+##config below
+levels:
+  messages:
+    default: <color:#FF0000>%player% <color:#FFFFFF>has reached level <color:#46FF00>%level%
+    2: <color:#FF0000>%player% <color:#FFFFFF>is now on level <color:#46FF00>%level%. <color:#9610E8>
+      He is a true killer
+  kills:
+    3: 1
+    5: 2
+    7: 2
+#################################################################
 #currently available options:
 # [XP]:amount -> Gives player definite amount of XP
 # [CONSOLE]:command -> Execute commands from console
 # [PLAYER]:command -> Execute command as a player
 # [MESSAGE]:message -> Send a message to the player who killed the bounty
 # [XPLVL]:amount -> Gives player the specified levels worth of XP
+# [BROADCAST]:message -> Broadcast a message to the entire server
+#Available Placeoholders For Command and Messages
+# %dead-bounty% -> The player who is dead or the player who was the bounty
+# %killer% -> Player who killed the bounty
 rewards:
-  max-rank: 10
   level:
-    "0":
-      - "[XP]:500"
-    "10":
-      - "[XP]:2500"
-      - "[CONSOLE]:tps"
-      - "[MESSAGE]:<yellow>Woo: <gradient:green:blue>||||||||||||||||||||||||</gradient>!"
-      - "[MESSAGE]:&cHello"
+    0:
+      - '[XP]:500'
+    1:
+      - '[XP]:500'
+      - '[BROADCAST]:<green> %dead-bounty% has been killed by <blue> %killer%'
+      - '[CONSOLE]:give %killer% cooked_beef 5'
+    2:
+      - '[XP]:500'
+      - '[BROADCAST]:<yellow> %dead-bounty% has been killed by <blue> %killer%'
+      - '[CONSOLE]:give %killer% gold_block 5'
+    10:
+      - '[XP]:2500'
+      - '[CONSOLE]:tps'
+      - '[MESSAGE]:<yellow>Woo: <gradient:green:blue>||||||||||||||||||||||||</gradient>!'
+      - '[MESSAGE]:&cHello'
+      - '[CONSOLE]:give %killer% bread 5'
+
+#################################################################
+#Messages that are used in the game. Almost all the messages support multiple placeholders. The placeholders for each
+#message has been documented above its key.
+#All the messages in the config support MiniMessages from kyori's Adventure API.
+#All the messages down here support PlaceholderAPI Support...The placeholders are parsed for the player to whom the
+#message has been sent. Not the killer or Dead Player. This is done to make consistency in the plugin messaging
+messages:
+  #Available Placeholders:
+  #%dead-player% -> Name of the dead player
+  #%killer% -> Name of the killer
+  #%%rand-loc%% -> A random location of radius 50 of the bounty player
+  new-bounty-broadcast:
+    - <color:#E81010>%dead-player% <color:#FFFFFF>was slained by <color:#FFD800>%killer%
+    - <color:#E81010>%killer% <color:#00FFFB>has now a bounty on his head! He has been last spotted on somewhere near <color:#FF7C00>%rand-loc%
+  #Available Placeholders:
+  #%player% -> Name of the dead player who has bounty
+  #%player-x% -> X Location X of the dead bounty
+  #%player-y% -> Y Location Y of the dead bounty
+  #%player-z% -> Y Location Z of the dead bounty
+  #%killer% -> Player who killed the bounty
+  #%player_kills% -> The consecutive kills bounty had
+  #%player_level% -> The current reward level the player had
+  player-bounty-released-broadcast:
+    - <color:#FFD500>%killer% <color:#FFFFFF> has killed bounty <color:#F3FF00>%player% <color:#A2A2A1>[<color:#7E00FB>Level %player_level%<color:#A2A2A1>]
+version: 1.0
