--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
                                     <pattern>de.leonhard.storage</pattern>
                                     <shadedPattern>com.semivanilla.bounties.shaded.storage</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>me.mattstudios.mf</pattern>
+                                    <shadedPattern>com.semivanilla.bounties.shaded.command</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>dev.triumphteam.gui</pattern>
+                                    <shadedPattern>com.semivanilla.bounties.shaded.gui</shadedPattern> <!-- Replace package here here -->
+                                </relocation>
                             </relocations>
                         </configuration>
                     </execution>
@@ -79,6 +87,10 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        <repository>
+            <id>repo</id>
+            <url>https://repo.mattstudios.me/artifactory/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -96,7 +108,7 @@
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-minimessage</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.10.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.simplix-softworks</groupId>
@@ -108,6 +120,16 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.11.1</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.mattstudios.utils</groupId>
+            <artifactId>matt-framework</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.triumphteam</groupId>
+            <artifactId>triumph-gui</artifactId>
+            <version>3.0.5</version>
         </dependency>
     </dependencies>
 
