--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -37,6 +37,26 @@ rewards:
     4:
       - '[XP]:2000'
 
+##The message that would parse when %bs_tag% is used if the player is bounty
+##NOTE: PlaceholderAPI doesn't support MiniMessage, so use Legacy Color Codes
+placeholder-tag-message: " (bounty)"
+
+##Configuration for GUI's
+#name -> Name of the GUI
+#rows -> How many rows the plugin should have without the bottom navbar
+#previous -> Display name for the previous-button
+#next -> Display name for the next-button. %player% -> displays the playername
+#name-player-placeholder -> The text to be displayed on each bounty head
+#lore-placeholder -> The lore to be added on to each bounty had
+gui:
+  name: "<red>Bounties"
+  rows: 3
+  previous: "<color:#FFE400>« Previous"
+  next: "<color:#FFE400>» Next"
+  name-player-placeholder: "<color:#00FFF0>%player%"
+  lore-placeholder:
+    - "<color:#00FFF0>Time left <color:#A9A7A2>» %timeleft%"
+    - "<color:#00FFF0>Current Kills <color:#A9A7A2>» %kills%"
 #################################################################
 #Messages that are used in the game. Almost all the messages support multiple placeholders. The placeholders for each
 #message has been documented above its key.
