Added placeholder %bs_online_formatted% to show the formatted value from the config respecting active bounty list
Changed Version From 1.1 -> 1.2

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,6 +41,14 @@ rewards:
 ##NOTE: PlaceholderAPI doesn't support MiniMessage, so use Legacy Color Codes
 placeholder-tag-message: " (bounty)"
 
+##The message that would be parsed when %bs_online_formatted% is used
+## zero-online: What would the plugin parse if there are no online bounties
+## online: The no of online players when the list is not empty in a formatted way
+##The available placeholder for parsing online player list is %online%
+placeholder-tag-bounty-online-formatted:
+  zero-online: ""
+  online: "\n&cBounties Online: %online%"
+
 ##Configuration for GUI's
 #name -> Name of the GUI
 #rows -> How many rows the plugin should have without the bottom navbar
