Added Command Bounties, Changed File System From Simplix-Storage to Bukkit's FileConfiguration
Removed command /bounty and changed everything to /bounties. Removed /bounties list and the GUI is mapped to /bounties

Changed From v1.2 -> v1.3 -> v1.4

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -82,6 +82,12 @@ square-map-radius:
 #All the messages down here support PlaceholderAPI Support...The placeholders are parsed for the player to whom the
 #message has been sent. Not the killer or Dead Player. This is done to make consistency in the plugin messaging
 messages:
+  help-message:
+    header:
+    - "<yellow><strikethrough>                         <reset> Bounty Help <yellow><strikethrough>                         <reset>"
+    comand-description: "<gold>%command%<white>: %description%"
+    fotter:
+    - "<yellow><strikethrough>                                                                  <reset>"
   #Available Placeholders:
   #%dead_player% -> Name of the dead player
   #%killer% -> Name of the killer
